package message;

option optimize_for = LITE_RUNTIME;


/////////////////协议范围 50 ~~~~100


message BaseMsg{
	optional int32    MsgType         = 1;      //消息是一对,1表示请求，2表示返回
	optional int32    Timeout         = 2;      //超时时间，单位秒
}

